zomato-analysis/ops/kubernetes/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colorectal-cancer-ingress
  namespace: mlops-system
  labels:
    app: colorectal-cancer-app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  rules:
    - host: cancer-prediction.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: colorectal-cancer-service
                port:
                  number: 80
